// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPassword.svelte > should render email/password auth 1`] = `
<div>
  <form>
    <div
      data-field-empty="false"
      data-field-root="true"
      data-field-type="email"
      data-has-icon="true"
    >
      <div
        aria-label="email"
        data-field=""
      >
        <label
          for="email"
        >
          email
        </label>
        <!---->
         
        <!---->
        <div
          data-input-root=""
        >
          <span
            aria-hidden="true"
            class="i-auth-email"
            data-input-icon=""
          />
          <!---->
           
          <input
            autocomplete="email"
            id="email"
            name="email"
            type="email"
          />
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <div
      data-field-empty="false"
      data-field-root="true"
      data-field-type="password"
      data-has-icon="true"
    >
      <div
        aria-label="Password"
        data-field=""
      >
        <label
          for="password"
        >
          Password
        </label>
        <!---->
         
        <!---->
        <div
          data-input-root=""
        >
          <span
            aria-hidden="true"
            class="i-auth-password"
            data-input-icon=""
          />
          <!---->
           
          <input
            autocomplete="current-password"
            id="password"
            name="password"
            type="password"
          />
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <!---->
    <button
      class="col-start-3 mt-4 h-10 cursor-pointer rounded bg-purple-600 text-center text-white hover:bg-purple-700"
      data-auth-mode="password"
      data-button="true"
      data-size="md"
      data-style="default"
      data-variant="default"
      type="submit"
    >
      <!---->
      Sign in
      
      <!---->
    </button>
    
    <!---->
  </form>
  
</div>
`;

exports[`AuthPassword.svelte > should render phone/password auth 1`] = `
<div>
  <form>
    <div
      data-field-empty="false"
      data-field-root="true"
      data-field-type="tel"
      data-has-icon="true"
    >
      <div
        aria-label="phone"
        data-field=""
      >
        <label
          for="phone"
        >
          phone
        </label>
        <!---->
         
        <!---->
        <div
          data-input-root=""
        >
          <span
            aria-hidden="true"
            class="i-auth-phone"
            data-input-icon=""
          />
          <!---->
           
          <input
            autocomplete="username"
            id="phone"
            name="phone"
            type="tel"
          />
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <div
      data-field-empty="false"
      data-field-root="true"
      data-field-type="password"
      data-has-icon="true"
    >
      <div
        aria-label="Password"
        data-field=""
      >
        <label
          for="password"
        >
          Password
        </label>
        <!---->
         
        <!---->
        <div
          data-input-root=""
        >
          <span
            aria-hidden="true"
            class="i-auth-password"
            data-input-icon=""
          />
          <!---->
           
          <input
            autocomplete="current-password"
            id="password"
            name="password"
            type="password"
          />
          <!---->
        </div>
        
        <!---->
      </div>
       
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <!---->
    <button
      class="col-start-3 mt-4 h-10 cursor-pointer rounded bg-purple-600 text-center text-white hover:bg-purple-700"
      data-auth-mode="password"
      data-button="true"
      data-size="md"
      data-style="default"
      data-variant="default"
      type="submit"
    >
      <!---->
      Sign in
      
      <!---->
    </button>
    
    <!---->
  </form>
  
</div>
`;
